spectec/test/elab/neg/type-extend-struct.spectec
;; A variant tries to inline a struct type as a case. Only variant
;; types are inlinable as variant cases.

syntax myStruct = { X nat }

syntax extendStruct =
  | myStruct
  | OTHER nat
